--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -35,8 +35,8 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <!-- <li><a class="dropdown-item" href="{% url 'category_summary' %}">All Products</a></li>
                         <li><hr class="dropdown-divider" /></li> -->
-                        <li><a class="dropdown-item" href="{% url 'category' 'FG' %}">Giày FG</a></li>
-                        <li><a class="dropdown-item" href="{% url 'category' 'TF' %}">Giày TF</a></li> 
+                        <li><a class="dropdown-item" href="{% url 'category' 'Giày FG' %}">Giày FG</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category' 'Giày TF' %}">Giày TF</a></li> 
                     </ul>
                 </li>
             </ul>
